# test-morfo

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/test_morfo/: aws_uploader.py  color_stats.py  cropping.py  image_generator.py  main.py  models.py  shapes_creator.py
terraform/: iam.tf  lambda.tf  output.tf  rds.tf  s3.tf  variables.tf
tests/: test_color_analysis.py
